updated background and button

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
     Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: rgb(255, 215, 215); /* Make the font color white */
+  background: black; /* Make the background black */
 }
 
 * {
@@ -32,4 +34,47 @@ code {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.button {
+  --primary-color: #000000;
+  --secondary-color: #484848;
+  --background-color: var(--primary-color);
+  --background-color-hover: var(--secondary-color);
+  --border-radius: 8px;
+  --font-size: 1.5rem;
+  --line-height: 2.5rem;
+  --padding-x: 2rem;
+  --padding-y: 1rem;
+  --transition: background-color 0.2s cubic-bezier(0.47, 0, 0.745, 0.715),
+                 color 0.2s cubic-bezier(0.47, 0, 0.745, 0.715),
+                 transform 0.2s cubic-bezier(0.47, 0, 0.745, 0.715);
+  display: inline-block;
+  cursor: pointer;
+  padding: var(--padding-y) var(--padding-x);
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
+    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-weight: bold;
+  font-size: var(--font-size);
+  line-height: var(--line-height);
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: rgb(255, 193, 193);
+  background-color: var(--background-color);
+  border-radius: var(--border-radius);
+  border: none;
+  outline: none;
+  transition: var(--transition);
+}
+
+.button:hover,
+.button:focus {
+  background-color: var(--background-color-hover);
+  transition: var(--transition);
+}
+
+.button:active {
+  transform: translateY(2px);
+  transition: var(--transition);
 }
